pod-security-vpol/baseline/disallow-host-namespaces/.kyverno-test-exceptions/exception-resources.yaml
apiVersion: v1
kind: Pod
metadata: {name: exception-partial, namespace: default}
spec: {hostNetwork: true, containers: [{name: app, image: nginx:1.27}]}
---
apiVersion: v1
kind: Pod
metadata: {name: exception-wrong, namespace: default}
spec: {hostPID: true, containers: [{name: app, image: nginx:1.27}]}
---
apiVersion: v1
kind: Pod
metadata: {name: exception-sibling, namespace: default}
spec: {hostNetwork: true, hostPID: true, containers: [{name: app, image: nginx:1.27}]}
---
apiVersion: v1
kind: Pod
metadata: {name: exception-whole, namespace: default}
spec: {hostPID: true, containers: [{name: app, image: nginx:1.27}]}
